my thr sol